--- a/courses/templates/courses/course_form.html
+++ b/courses/templates/courses/course_form.html
@@ -4,5 +4,8 @@
     <form action="{{ request.path }}" method="post">
         {% csrf_token %}
         {{ form.as_div }}
+        <!-- TODO: Change the URL to courses page instead of dashboard -->
+        <a href="{% url 'dashboard' %}"><button type="button">Cancel</button></a>
+        <button type="submit">Save</button>
     </form>
 {% endblock %}
