--- a/masters/templates/masters/dashboard.html
+++ b/masters/templates/masters/dashboard.html
@@ -2,5 +2,22 @@
 {% load static %}
 
 {% block body %}
-    
+    <h1>Week 14 Schedule</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Time</th>
+                <th>Task</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Dec 13th, 2023</td>
+                <td>16:30-17:00</td>
+                <td>CS 499P: Honors Thesis Oral Defense</td>
+            </tr>
+        </tbody>
+        
+    </table>
 {% endblock %}
