--- a/masters/templates/masters/dashboard.html
+++ b/masters/templates/masters/dashboard.html
@@ -1,23 +1,68 @@
 {% extends 'masters/layout.html' %}
 {% load static %}
 
+{% block link %} <link rel="stylesheet" href="{% static 'masters/css/dashboard.css' %}"> {% endblock %}
+
 {% block body %}
-    <h1>Week 14 Schedule</h1>
+    <h1>Week {{ week.number }}</h1>
     <table>
+        <colgroup>
+            <col span="1" style="width: 70%;">
+            <col span="1" style="width: 10%;">
+            <col span="1" style="width: 20%;">
+          </colgroup>
         <thead>
             <tr>
+                <th>Task</th>
                 <th>Date</th>
                 <th>Time</th>
-                <th>Task</th>
             </tr>
         </thead>
         <tbody>
+            {% for task in week.tasks.all %}
             <tr>
-                <td>Dec 13th, 2023</td>
-                <td>16:30-17:00</td>
-                <td>CS 499P: Honors Thesis Oral Defense</td>
+                <td>{{ task.course.nickname }}: {{ task.name }}</td>
+                <td>{{ task.date }}</td>
+                <td>{{ task.start_time }}-{{ task.end_time }}</td>
             </tr>
+            {% empty %}
+            <tr>
+                <td>You have no scheudled tasks for this week!</td>
+                <td></td>
+                <td></td>
+            </tr>
+            {% endfor %}
         </tbody>
-        
+    </table>
+
+    <h1>Upcoming Tasks</h1>
+    <table>
+        <colgroup>
+            <col span="1" style="width: 70%;">
+            <col span="1" style="width: 10%;">
+            <col span="1" style="width: 20%;">
+          </colgroup>
+        <thead>
+            <tr>
+                <th>Task</th>
+                <th>Type</th>
+                <th>Due Date</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for task in tasks %}
+            <tr>
+                <td>{{ task.course.nickname }}: {{ task.name }}</td>
+                <td>{{ task.type }}</td>
+                <td>{{ task.due_date }}</td>
+            </tr>
+            {% empty %}
+            <tr>
+                <td>You have no upcoming assignments due!</td>
+                <td></td>
+                <td></td>
+            </tr>
+            {% endfor %}
+        </tbody>
     </table>
 {% endblock %}
