--- a/masters/templates/masters/layout.html
+++ b/masters/templates/masters/layout.html
@@ -17,8 +17,7 @@
                 <li><a href="{% url 'dashboard' %}">Dashboard</a></li>
                 <li><a href="{% url 'courses' %}">Courses</a></li>
                 <li><a href="{% url 'tasks' %}">Tasks</a></li>
-                <!-- TODO: Add schedule URL -->
-                <li><a href="">Schedule</a></li>
+                <li><a href="{% url 'weeks' %}">Schedule</a></li>
             </ul>
         </div>
         <a href="{% url 'logout' %}"><img src="{% static 'masters/svg/logout.svg' %}" alt="Logout" id="logout_icon"></a>
