--- a/courses/templates/courses/courses.html
+++ b/courses/templates/courses/courses.html
@@ -1,5 +1,18 @@
 {% extends "masters/layout.html" %}
+{% load static %}
+
+{% block link %} <link rel="stylesheet" href="{% static 'courses/css/courses.css' %}">{%  endblock %}
 
 {% block body %}
-    {{ object_list }}
+    <h1>Courses</h1>
+
+    <a href="{% url 'course_new' %}"><button type="button" class="save">New</button></a>
+    <a href="" ><button type="button" class="save">Link to Canvas</button></a>
+
+    <ul>
+        {% for course in object_list %}
+            <a href="{% url 'course_edit' pk=course.pk %}"><li>{{ course.subject }} {{ course.number }}</li></a>
+        {% endfor %}
+    </ul>
+    
 {% endblock %}
