--- a/masters/static/masters/css/layout.css
+++ b/masters/static/masters/css/layout.css
@@ -84,7 +84,7 @@ a:hover {
 }
 
 h1 {
-    width: 80vh;
+    width: 80vw;
     font-family: "Manrope", sans-serif;
     font-size: 3.5vh;
     font-style: normal;
