--- a/masters/templates/masters/dashboard.html
+++ b/masters/templates/masters/dashboard.html
@@ -7,8 +7,8 @@
     <h1>Week {{ week.number }}</h1>
     <table>
         <colgroup>
-            <col span="1" style="width: 70%;">
-            <col span="1" style="width: 10%;">
+            <col span="1" style="width: 60%;">
+            <col span="1" style="width: 20%;">
             <col span="1" style="width: 20%;">
           </colgroup>
         <thead>
@@ -21,7 +21,7 @@
         <tbody>
             {% for task in week.tasks.all %}
             <tr>
-                <td>{{ task.course.nickname }}: {{ task.name }}</td>
+                <td>{{task.task.course.nickname}}: {{ task.task.name }}: {{ task.name }}</td>
                 <td>{{ task.date }}</td>
                 <td>{{ task.start_time }}-{{ task.end_time }}</td>
             </tr>
@@ -38,15 +38,15 @@
     <h1>Upcoming Tasks</h1>
     <table>
         <colgroup>
-            <col span="1" style="width: 70%;">
-            <col span="1" style="width: 10%;">
+            <col span="1" style="width: 60%;">
+            <col span="1" style="width: 20%;">
             <col span="1" style="width: 20%;">
           </colgroup>
         <thead>
             <tr>
                 <th>Task</th>
                 <th>Type</th>
-                <th>Due Date</th>
+                <th>Due</th>
             </tr>
         </thead>
         <tbody>
